--- a/vars.yaml
+++ b/vars.yaml
@@ -1,2 +1,3 @@
 devicePath: /dev/vda
 basePackages: 'base linux linux-firmware grub efibootmgr man-db man-pages texinfo tldr vi vim neovim neofetch htop ranger'
+userTimezone: America/Mexico_City
